Change up-page style

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </main>
       <footer>
         <div class="up-page">
-          <p>&and;</p>
+          <img src="img/arrow.png" alt="">
         </div>
       </footer>
     </div>
