Change left & right button

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
           <h3>There are plenty of places</h3>
           <h2>That are worth seeing</h2>
           <img src="img/jorney_1.jpg" alt="jorney">
-          <div class="switch-left"><a href="#">&larr;</a></div>
-          <div class="switch-right"><a href="#">&rarr;</a></div>
+          <div class="switch-left"><a href="#"><img src="img/left-arrow.png" alt="jorney"></a></div>
+          <div class="switch-right"><a href="#"><img src="img/right-arrow.png" alt="jorney"></a></div>
         </div>
         <div class="destinations">
           <h2>Top Destinations</h2>
