Page up add link to up

--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
       </main>
       <footer>
         <div class="up-page">
-          <img src="img/arrow.png" alt="">
+          <a href="#">
+            <img src="img/arrow.png" alt="">
+          </a>
         </div>
       </footer>
     </div>
